--- a/source/_posts/国外便宜虚拟机汇总.md
+++ b/source/_posts/国外便宜虚拟机汇总.md
@@ -6,6 +6,8 @@ categories: 运维冷热知识
 ---
 关于运维知识方面没有太多的发言权，这里只算是对自己所学知识的一个汇总与总结吧
 
+<!--more-->
+
 ## linode
 
 地址 [linode](https://www.linode.com)  linode最低配置的主机60刀一年，差不多400的样子
